--- a/bicemodded/localisation/english/equip_air_l_english.yml
+++ b/bicemodded/localisation/english/equip_air_l_english.yml
@@ -170,7 +170,6 @@
  nav_bomber_equipment_5:0 "Naval Bomber V"
  nav_bomber_equipment_5_short:0 "NAV V"
  nav_bomber_equipment_5_desc:0 "Late war naval bomber design with overall improved performance and latest war time technology such as advanced range and target finder and radar technology. Its increased bomb-load is a threat for merchant shipping and hostile surface fleets."
- generic_flying_boat:0 "Interwar Flying Boat"
  flying_boat_equipment_1:0 "Flying Boat I"
  flying_boat_equipment_1_desc:0 "Flying Boats are long-range maritime patrol aircrafts that carry out naval and air reconnaissance duties in the pacific and atlantic theater where the number of available airfields is limited. Flying Boats have moderate self-defense armament and its bomb loads can be used to attack ships when discovered. The military value of flying boats was well-recognized, and every country bordering on water operated them in a military capacity at the outbreak of the war. They were utilized in various tasks from anti-submarine patrol to air-sea rescue and gunfire spotting for battleships."
  flying_boat_equipment_2:0 "Flying Boat II"
@@ -1949,25 +1948,19 @@ NOR_nav_bomber_equipment_3_short:"PBY"
  avro_lancaster_equipment_2_desc:0 "The Lancaster Special refers to several modified variants of the Avro Lancaster to perform different duties. This aircraft has been modified to accept the 12,000 lb Tallboy bomb."
  tech_avro_lancaster_equipment_2:0 "Avro Lancaster (Special)"
  
- prewar_flying_boat_equipment_1:0 "Prewar Flying Boat"
- prewar_flying_boat_equipment_1_desc:0 "Flying Boats are large amphibious aircraft used for scouting and attacking enemy fleets. While often carrying a larger payload and armament than naval bombers, flying boats are usually vulnerable to interception."
- saro_london_equipment:0 "London Flying Boat"
- saro_london_equipment_desc:0 "Flying Boats are large amphibious aircraft used for scouting and attacking enemy fleets. While often carrying a larger payload and armament than naval bombers, flying boats are usually vulnerable to interception."
- saro_london_equipment_1:0 "Saro London"
- saro_london_equipment_1_short:0 "London (F-B)"
- saro_london_equipment_1_desc:0 "Flying Boats are large amphibious aircraft used for scouting and attacking enemy fleets. While often carrying a larger payload and armament than naval bombers, flying boats are usually vulnerable to interception."
+ ENG_flying_boat_equipment_1:0 "Prewar Flying Boat"
+ ENG_flying_boat_equipment_1_desc:0 "Flying Boats are large amphibious aircraft used for scouting and attacking enemy fleets. While often carrying a larger payload and armament than naval bombers, flying boats are usually vulnerable to interception."
+ ENG_flying_boat_equipment_2:0 "Saro London"
+ ENG_flying_boat_equipment_2_short:0 "London (F-B)"
+ ENG_flying_boat_equipment_2_desc:0 "Flying Boats are large amphibious aircraft used for scouting and attacking enemy fleets. While often carrying a larger payload and armament than naval bombers, flying boats are usually vulnerable to interception."
  tech_saro_london_equipment_1:0 "Saro London"
- short_sunderland_equipment:0 "Sunderland Flying Boat"
- short_sunderland_equipment_desc:0 "Flying Boats are large amphibious aircraft used for scouting and attacking enemy fleets. While often carrying a larger payload and armament than naval bombers, flying boats are usually vulnerable to interception."
- short_sunderland_equipment_1:0 "Short Sunderland"
- short_sunderland_equipment_1_short:0 "Sunderland (F-B)"
- short_sunderland_equipment_1_desc:0 "Flying Boats are large amphibious aircraft used for scouting and attacking enemy fleets. While often carrying a larger payload and armament than naval bombers, flying boats are usually vulnerable to interception."
+ ENG_flying_boat_equipment_3:0 "Short Sunderland"
+ ENG_flying_boat_equipment_3_short:0 "Sunderland (F-B)"
+ ENG_flying_boat_equipment_3_desc:0 "Flying Boats are large amphibious aircraft used for scouting and attacking enemy fleets. While often carrying a larger payload and armament than naval bombers, flying boats are usually vulnerable to interception."
  tech_short_sunderland_equipment_1:0 "Short Sunderland"
- short_seaford_equipment:0 "Seaford Flying Boat"
- short_seaford_equipment_desc:0 "Flying Boats are large amphibious aircraft used for scouting and attacking enemy fleets. While often carrying a larger payload and armament than naval bombers, flying boats are usually vulnerable to interception."
- short_seaford_equipment_1:0 "Short Seaford"
- short_seaford_equipment_1_short:0 "Seaford (F-B)"
- short_seaford_equipment_1_desc:0 "Flying Boats are large amphibious aircraft used for scouting and attacking enemy fleets. While often carrying a larger payload and armament than naval bombers, flying boats are usually vulnerable to interception."
+ ENG_flying_boat_equipment_4:0 "Short Seaford"
+ ENG_flying_boat_equipment_4_short:0 "Seaford (F-B)"
+ ENG_flying_boat_equipment_4_desc:0 "Flying Boats are large amphibious aircraft used for scouting and attacking enemy fleets. While often carrying a larger payload and armament than naval bombers, flying boats are usually vulnerable to interception."
  tech_short_seaford_equipment_1:0 "Short Seaford"
  hawker_osprey_fighter_equipment_1:0 "Hawker Osprey"
  hawker_osprey_fighter_equipment_1_short:0 "Osprey (Cv-F)"
