--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -1435,7 +1435,7 @@ italian_focus:0 "Italian National Focus"
  ITA_eth_forts_desc:0 "In the event of war, the Italian East Africa will be cut off from the supplies flowing from the Italian motherland. Therefore, it is a must to hinge our defences on strategically-located strongholds to let our troops hold the ground until reinforcements from Egypt will arrive."
 
  ITA_alpino_forts:0 "Alpine Fortification"
- ITA_alpino_forts_desc:0 "We must defend our shores and borders against aggression by the fading and decadent imperial powers France and Britain. The western border is a natural line that will be impenetrable with additional forts and minefields."
+ ITA_alpino_forts_desc:0 "Our land borders are almost entirely covered by the Alps. While those mountains are a formidable obstacle in their own right, we have learned in the last war that they are not entirely impenetrable. Constructing a series of fortifications will help us hold the line against any enemy land invasion."
  ITA_alpin_defenses_tt:0 "Add §Y9 Land Forts§! in the alps bordering France andd Switzerland"
 
  ITA_civilian_focus:0 "Civilian Industry"
@@ -1633,7 +1633,7 @@ italian_focus:0 "Italian National Focus"
  ITA_Istituto_LUCE:0 "Istituto LUCE"
  ITA_Istituto_LUCE_desc:0 "The state film agency, every film in the 20s and 30s produced in Italy was made by LUCE, it was a very effective means of propaganda and could be used to make military training films."
  ITA_Increase_research_founding:0 "University of Trieste"
- ITA_Increase_research_founding_desc:0 "On the 19/09/1938 the Duce inaugurates the new University in Trieste."
+ ITA_Increase_research_founding_desc:0 "For a technologically advanced nation such as ours, there is always a need for more engineers. We have identified that a new university in Trieste will help mitigate the shortage of engineers."
  ITA_Hitler_visits_Rome:0 "Hitler visits Roma"
  ITA_Hitler_visits_Rome_desc:0 "Hitler will soon visit our capital, we will construct new roads and a grand hotel to accommodate him."
  ITA_corpo_truppe_volontarie: "Corpo truppe volontarie"
