--- a/bicemodded/localisation/english/lar_events_l_english.yml
+++ b/bicemodded/localisation/english/lar_events_l_english.yml
@@ -1020,7 +1020,7 @@
  lar_fra_join_the_ententes.3.desc: "After extensive discussion, the [From.GetAdjective] cabinet has narrowly voted to reject our proposal. The official response notes that an alliance between [From.GetNameDef] and [This.GetNameDef] would inevitably commit [From.GetNameDef] to defend countries which it had deliberately decided not to tie itself to. While we are, of course, free to choose our own foreign policy, it continues, we should not expect [From.GetNameDef] to come to our aid should we be drawn into a larger conflict."
  lar_fra_join_the_ententes.3.a: "Short-sighted Fools!"
  LaR_france_vichy_notification_events.1.t: "Syria defects to [FRA.GetLeader]"
- LaR_france_vichy_notification_events.1.desc: "Following a direct appeal by [FRA.GetLeader], the governor of the territory has declared his allegience to the so-called "[FRA.GetAdjective] Government-in-Exile", headed by [FRA.GetLeader]. Our troops in the area have been asked to join [FRA.GetLeader]'s forces, but most have opted to be repatriated to our lines.\n\nNonethless, [FRA.GetLeader] is now in control of the region."
+ LaR_france_vichy_notification_events.1.desc: "Following a direct appeal by [FRA.GetLeader], the governor of the French colonial territory has declared his allegience to the so-called "[FRA.GetAdjective] Government-in-Exile", headed by [FRA.GetLeader]. Our troops in the area have been asked to join [FRA.GetLeader]'s forces, but most have opted to be repatriated to our lines.\n\nNonethless, [FRA.GetLeader] is now in control of the region."
  LaR_france_vichy_notification_events.1.a: "Treason and Treachery!"
  LaR_france_vichy_notification_events.2.t: "Indochina defects to [FRA.GetLeader]"
  LaR_france_vichy_notification_events.3.t: "Central Africa defects to [FRA.GetLeader]"
@@ -1030,9 +1030,9 @@
  LaR_france_vichy_notification_events.7.t: "Pro-[FRA.GetLeader] coup in Syria"
  LaR_france_vichy_notification_events.7.desc: "Forces loyal to [FRA.GetLeader] have staged a coup in the territory. Just before dawn, multiple armed groups, clearly under the orders of [FRA.GetLeader], seized strategic locations around the area to neutralize any coordinated attempts at resistance. By midday, they controlled all major population centers and have effectively seized control of the territory."
  LaR_france_vichy_notification_events.7.a: "What underhanded and un-French methods!"
- LaR_france_vichy_notification_events.8.t: "Pro-[FRA.GetLeader] coup in Indochina"
- LaR_france_vichy_notification_events.9.t: "Pro-[FRA.GetLeader] coup in Central Africa"
- LaR_france_vichy_notification_events.10.t: "Pro-[FRA.GetLeader] coup in West Africa"
- LaR_france_vichy_notification_events.11.t: "Pro-[FRA.GetLeader] coup in North Africa"
- LaR_france_vichy_notification_events.12.t: "Pro-[FRA.GetLeader] coup in Madagascar"
+ LaR_france_vichy_notification_events.8.t: "Pro-[FRA.GetLeader] coup in French Indochina"
+ LaR_france_vichy_notification_events.9.t: "Pro-[FRA.GetLeader] coup in French Central Africa"
+ LaR_france_vichy_notification_events.10.t: "Pro-[FRA.GetLeader] coup in French West Africa"
+ LaR_france_vichy_notification_events.11.t: "Pro-[FRA.GetLeader] coup in French North Africa"
+ LaR_france_vichy_notification_events.12.t: "Pro-[FRA.GetLeader] coup in French Madagascar"
  
