--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -3303,6 +3303,7 @@ USA_preemptive_deals_desc:0 "We need to stop Venezuela from selling oil to possi
  ac_bonus:0 "§YArmored Car§! models bonus"
  radar_tech_bonus:0 "§YRadar§! research bonus"
  radio_bonus:0 "§YRadio§! bonus"
+ radar_bonus:0 "§YRadar§! research bonus"
  mech_army_bonus:0 "§YMechanized Army§! bonus"
  secret_bonus:0 "§YWonder Weapons§! bonus"
  rocket_bonus:0 "§YRocket Weapons§! bonus"
