--- a/bicemodded/localisation/english/equip_air_l_english.yml
+++ b/bicemodded/localisation/english/equip_air_l_english.yml
@@ -171,14 +171,19 @@
  nav_bomber_equipment_5_short:0 "NAV V"
  nav_bomber_equipment_5_desc:0 "Late war naval bomber design with overall improved performance and latest war time technology such as advanced range and target finder and radar technology. Its increased bomb-load is a threat for merchant shipping and hostile surface fleets."
  flying_boat_equipment_1:0 "Flying Boat I"
+ flying_boat_equipment_1_short:0 "F-B I"
  flying_boat_equipment_1_desc:0 "Flying Boats are long-range maritime patrol aircrafts that carry out naval and air reconnaissance duties in the pacific and atlantic theater where the number of available airfields is limited. Flying Boats have moderate self-defense armament and its bomb loads can be used to attack ships when discovered. The military value of flying boats was well-recognized, and every country bordering on water operated them in a military capacity at the outbreak of the war. They were utilized in various tasks from anti-submarine patrol to air-sea rescue and gunfire spotting for battleships."
  flying_boat_equipment_2:0 "Flying Boat II"
+ flying_boat_equipment_2_short:0 "F-B II"
  flying_boat_equipment_2_desc:0 "Pre-War Flying Boats design for long-range maritime patrol that carries out naval and air reconnaissance duties in the pacific and atlantic theater where the number of available airfields is limited. Flying Boats have moderate self-defense armament and its bomb loads can be used to attack ships when discovered. The military value of flying boats was well-recognized, and every country bordering on water operated them in a military capacity at the outbreak of the war. They were utilized in various tasks from anti-submarine patrol to air-sea rescue and gunfire spotting for battleships."
  flying_boat_equipment_3:0 "Flying Boat III"
+ flying_boat_equipment_3_short:0 "F-B III"
  flying_boat_equipment_3_desc:0 "Improved Flying Boat design for long-range maritime patrol that carries out naval and air reconnaissance duties in the pacific and atlantic theater where the number of available airfields is limited. Flying Boats have moderate self-defense armament and its bomb loads can be used to attack ships when discovered. The military value of flying boats was well-recognized, and every country bordering on water operated them in a military capacity at the outbreak of the war. They were utilized in various tasks from anti-submarine patrol to air-sea rescue and gunfire spotting for battleships."
  flying_boat_equipment_4:0 "Flying Boat IV"
+ flying_boat_equipment_4_short:0 "F-B IV"
  flying_boat_equipment_4_desc:0 "Advanced Flying Boat design for long-range maritime patrol that carries out naval and air reconnaissance duties in the pacific and atlantic theater where the number of available airfields is limited. Flying Boats have moderate self-defense armament and its bomb loads can be used to attack ships when discovered. The military value of flying boats was well-recognized, and every country bordering on water operated them in a military capacity at the outbreak of the war. They were utilized in various tasks from anti-submarine patrol to air-sea rescue and gunfire spotting for battleships."
  flying_boat_equipment_5:0 "Flying Boat V"
+ flying_boat_equipment_5_short:0 "F-B V"
  flying_boat_equipment_5_desc:0 "Late war Flying Boat design for long-range maritime patrol that carries out naval and air reconnaissance duties in the pacific and atlantic theater where the number of available airfields is limited. Flying Boats have moderate self-defense armament and its bomb loads can be used to attack ships when discovered. The military value of flying boats was well-recognized, and every country bordering on water operated them in a military capacity at the outbreak of the war. They were utilized in various tasks from anti-submarine patrol to air-sea rescue and gunfire spotting for battleships."
  
  generic_cas:0 "Interwar CAS"
