--- a/bicemodded/localisation/english/equipment_l_english.yml
+++ b/bicemodded/localisation/english/equipment_l_english.yml
@@ -6671,16 +6671,20 @@
  
  #Japanese Flying boats#
  tech_JAP_flying_boat_equipment_0:0 "Flying Boat I"
+ tech_JAP_flying_boat_equipment_0_desc:0 "Flying Boats are long-range maritime patrol aircrafts that carry out naval and air reconnaissance duties in the pacific and atlantic theater where the number of available airfields is limited. Flying Boats have moderate self-defense armament and its bomb loads can be used to attack ships when discovered. The military value of flying boats was well-recognized, and every country bordering on water operated them in a military capacity at the outbreak of the war. They were utilized in various tasks from anti-submarine patrol to air-sea rescue and gunfire spotting for battleships."
  JAP_flying_boat_equipment_1_desc:0 "Flying Boats are long-range maritime patrol aircrafts that carry out naval and air reconnaissance duties in the pacific and atlantic theater where the number of available airfields is limited. Flying Boats have moderate self-defense armament and its bomb loads can be used to attack ships when discovered. The military value of flying boats was well-recognized, and every country bordering on water operated them in a military capacity at the outbreak of the war. They were utilized in various tasks from anti-submarine patrol to air-sea rescue and gunfire spotting for battleships."
  JAP_flying_boat_equipment_1:0 "Flying Boat I"
+ JAP_flying_boat_equipment_1_short:0 "(Fly.Bt)"
  
  
  tech_JAP_flying_boat_equipment_1:0 "Kawanishi H6K Flying-Boat"
+ tech_JAP_flying_boat_equipment_1_desc:0 "The Kawanishi H6K1 is a long-range flying boat. It was designed in response for an IJN request for a long-range naval patrol airplane which could carry 1600 kg of torpedoes or 1000 kg of bombload. The H6K accomplished these weight requirements, and could perform up to 24-hour patrol missions over an extremely long range - H6Ks performed missions over most of Australia from bases on the East Indies. 215 were built from 1936 to 1942."
  JAP_flying_boat_equipment_2_desc:0 "The Kawanishi H6K1 is a long-range flying boat. It was designed in response for an IJN request for a long-range naval patrol airplane which could carry 1600 kg of torpedoes or 1000 kg of bombload. The H6K accomplished these weight requirements, and could perform up to 24-hour patrol missions over an extremely long range - H6Ks performed missions over most of Australia from bases on the East Indies. 215 were built from 1936 to 1942."
  JAP_flying_boat_equipment_2:0 "Kawanishi H6K1 Flying-Boat"
  JAP_flying_boat_equipment_2_short:0 "H6K1 (Fly.Bt)"
  
  tech_JAP_flying_boat_equipment_2:0 "Kawanishi H8K Flying-Boat"
+ tech_JAP_flying_boat_equipment_2_desc:0 "The Kawanishi H8K is a long-range flying boat."
  JAP_flying_boat_equipment_3_desc:0 "The Kawanishi H8K is a long-range flying boat."
  JAP_flying_boat_equipment_3:0 "Kawanishi H8K1 Flying-Boat"
  JAP_flying_boat_equipment_3_short:0 "H8K1 (Fly.Bt)"
