--- a/bicemodded/localisation/english/equipment_l_english.yml
+++ b/bicemodded/localisation/english/equipment_l_english.yml
@@ -6106,17 +6106,21 @@
  hs_129_gun_upgrade:0 "Gunpod"
  hs_129_gun_upgrade_desc:0 "Installation of a gunpod carrying a 30 mm cannon. Later upgrades allow the use of a better 30 mm cannon, a 3.7 cm cannon, and finally the BK75 cannon."
  
- GER_flying_boat_equipment_1:0 "Do 18"
- GER_flying_boat_equipment_1_desc:0 "The Do 18 was a flying boat.In 1934 the Dornier Flugzeugwerke started development of a new twin-engine flying boat to replace the Dornier Do J "Wal" (Whale) in both military and civil roles. The Do 18D of which 79 were built, was the first military version, powered by two 600 HP Jumo 205C engines, armed with one 7.92mm MG15 machine gun in the bow and dorsal positions each. Is maximum speed was 250 km/h and its range 3500 km."
+ GER_flying_boat_equipment_1:0 "Do 16 Wal"
+ GER_flying_boat_equipment_1_short:0 "Do 16 F-B"
+ GER_flying_boat_equipment_1_desc:0 "The Do 16 was a widely used 1920's flying boat also called Dornier Do J Wal(Whale). It was first powered by two 355 hp Rolls-Royce Eagle IX engines. Later versions used nearly every available engine on the market from makers like Hispano-Suiza, Napier & Son, Lorraine-Dietrich, BMW, and even the US-built Liberty V-12 engine."
  GER_flying_boat_equipment_2:0 "Do 24"
+ GER_flying_boat_equipment_2_short:0 "Do 24 F-B"
  GER_flying_boat_equipment_2_desc:0 "The Do 24 was an all-metal parasol monoplane with a broad-beamed hull and stabilising sponsons. Twin tails were mounted on the upswept rear of the hull, while three wing-mounted tractor configuration Bramo 323R-2 Fafnir 9-cylinder radial engines with 940 HP each powered the aircraft. Fuel was carried in tanks in the sponsons and the wing centre section. Up to 1,200 kg of bombs could be carried under the aircraft's wings, while defensive armament consisted of three gun turrets, one each in nose, dorsal and tail positions. In early aircraft the turrets were each fitted with a machine gun but later aircraft carried a 20 mm cannon in the dorsal turret."
- GER_flying_boat_equipment_3:0 "Bv 238"
- GER_flying_boat_equipment_3_desc:0 "The Blohm & Voss BV 238 was a German flying boat and the heaviest aircraft ever built when it first flew in 1944, and was the largest aircraft produced by any of the Axis powers during World War II.Power was provided by six 1,750 HP Daimler-Benz DB 603 liquid-cooled inverted V12 piston engines arranged in nacelles along the leading edge of the centre section. The extremely massive defensive armament consisted of: 8 x 13 mm MG131; of 4 in each nose and tail turret. 8 x 13mm MG131; of 4 in each wing mounted turret. 4 x 13mm MG131; 2 (as a twinned MG 131Z) in each manually aimed beam/waist position. 2 x 20mm MG151/20 autocannon in forward dorsal turret. It had a maximum speed of 350 km/h and a range of 6600 km. It could also carry a bombload of 9 tons or 2x 1200 kg Torpedoes or 4 x Hs-239 Missiles   "
- GER_flying_boat_equipment_4:0 "Bv 238" # pic of equip3 shows Bv 238
- GER_flying_boat_equipment_4_desc:0 "The Bv 238 was a massive flying boat." #pic of equip3 shows the Bv 238
+ GER_flying_boat_equipment_3:0 "Bv 138 Seedrache"
+ GER_flying_boat_equipment_3_short:0 "Bv 138  F-B"
+ GER_flying_boat_equipment_3_desc:0 "The BV 138's appearance was unique in its combination of unusual design features with its twin boom tail unit, short fuselage and trimotor engine configuration. The short hull, with its hydrodynamic step beneath and flat sides, earned it the nickname, "Fliegender Holzschuh" (the flying clog)."
+ GER_flying_boat_equipment_4:0 "Bv 238"
+ GER_flying_boat_equipment_4_short:0 "Bv 238 F-B"
+ GER_flying_boat_equipment_4_desc:0 "The Bv 238 was the heaviest aircraft ever built when it first flew in 1944, and was the largest aircraft produced by any of the Axis powers during World War II.Power was provided by six 1,750 HP Daimler-Benz DB 603 liquid-cooled inverted V12 piston engines arranged in nacelles along the leading edge of the centre section. Maximum speed of 350 km/h and a range of 6600 km. It could also carry a bombload of 9 tons or 2x 1200 kg Torpedoes or 4 x Hs-239 Missiles"
  
- tech_ger_flying_boat_equipment_1:0 "Do 18"
- tech_ger_flying_boat_equipment_1_desc:0 "The Do 18 was a flying boat."
+ tech_ger_flying_boat_equipment_1:0 "Do 16 Wal"
+ tech_ger_flying_boat_equipment_1_desc:0 "The Do 16 Wal was a flying boat."
  tech_ger_flying_boat_equipment_2:0 "Do 24"
  tech_ger_flying_boat_equipment_2_desc:0 "The Do 24 was a flying boat."
  tech_ger_flying_boat_equipment_3:0 "Bv 138"
@@ -7777,6 +7781,21 @@
  SOV_transport_plane_equipment_3:0 "Petlyakov Pe-8-ON Transport Plane"
  SOV_transport_plane_equipment_3_short:0 "Pe-8-ON (T.P)"
  SOV_transport_plane_equipment_3_desc:0 "§LPlanes used to transport troops on paradrop missions.§!"
+ 
+ 
+ SOV_flying_boat_equipment_1:0 "BE-6"
+ SOV_flying_boat_equipment_1_short:0 "BE-6 F-B"
+ SOV_flying_boat_equipment_1_desc:0 ""
+ SOV_flying_boat_equipment_2:0 "MBR-2"
+ SOV_flying_boat_equipment_2_short:0 "MBR-2 F-B"
+ SOV_flying_boat_equipment_2_desc:0 "The Do 24 was an all-metal parasol monoplane with a broad-beamed hull and stabilising sponsons. Twin tails were mounted on the upswept rear of the hull, while three wing-mounted tractor configuration Bramo 323R-2 Fafnir 9-cylinder radial engines with 940 HP each powered the aircraft. Fuel was carried in tanks in the sponsons and the wing centre section. Up to 1,200 kg of bombs could be carried under the aircraft's wings, while defensive armament consisted of three gun turrets, one each in nose, dorsal and tail positions. In early aircraft the turrets were each fitted with a machine gun but later aircraft carried a 20 mm cannon in the dorsal turret."
+ SOV_flying_boat_equipment_3:0 "MDR-2"
+ SOV_flying_boat_equipment_3_short:0 "MDR-2 F-B"
+ SOV_flying_boat_equipment_3_desc:0 "The BV 138's appearance was unique in its combination of unusual design features with its twin boom tail unit, short fuselage and trimotor engine configuration. The short hull, with its hydrodynamic step beneath and flat sides, earned it the nickname, "Fliegender Holzschuh" (the flying clog)."
+ SOV_flying_boat_equipment_4:0 "MDR-6"
+ SOV_flying_boat_equipment_4_short:0 "MDR-6 F-B"
+ SOV_flying_boat_equipment_4_desc:0 "The Bv 
+ 
 #### archetype description ###
  ###soviet###
  amph_soviet_tank_chassis:0 "Amphibious Tank"
