--- a/bicemodded/localisation/english/equip_air_l_english.yml
+++ b/bicemodded/localisation/english/equip_air_l_english.yml
@@ -777,16 +777,6 @@
  NZL_cv_fighter_equipment_3_short:0 "Firefly"
  SAF_cv_fighter_equipment_3_short:0 "Firefly"
  RAJ_cv_fighter_equipment_3_short:0 "Firefly"
- CAN_prewar_flying_boat_equipment_1:0 "Supermarine Southampton"
- CAN_prewar_flying_boat_equipment_1_desc:0 "Flying Boats are large amphibious aircraft used for scouting and attacking enemy fleets. While often carrying a larger payload and armament than naval bombers, flying boats are usually vulnerable to interception."
- RAJ_prewar_flying_boat_equipment_1:0 "Supermarine Southampton"
- RAJ_prewar_flying_boat_equipment_1_desc:0 "Flying Boats are large amphibious aircraft used for scouting and attacking enemy fleets. While often carrying a larger payload and armament than naval bombers, flying boats are usually vulnerable to interception."
- AST_prewar_flying_boat_equipment_1:0 "Supermarine Southampton"
- AST_prewar_flying_boat_equipment_1_desc:0 "Flying Boats are large amphibious aircraft used for scouting and attacking enemy fleets. While often carrying a larger payload and armament than naval bombers, flying boats are usually vulnerable to interception."
- NZL_prewar_flying_boat_equipment_1:0 "Supermarine Southampton"
- NZL_prewar_flying_boat_equipment_1_desc:0 "Flying Boats are large amphibious aircraft used for scouting and attacking enemy fleets. While often carrying a larger payload and armament than naval bombers, flying boats are usually vulnerable to interception."
- SAF_prewar_flying_boat_equipment_1:0 "Supermarine Southampton"
- SAF_prewar_flying_boat_equipment_1_desc:0 "Flying Boats are large amphibious aircraft used for scouting and attacking enemy fleets. While often carrying a larger payload and armament than naval bombers, flying boats are usually vulnerable to interception."
  FRA_CAS_equipment_0:0 "Potez P.25"
  FRA_CAS_equipment_0_short:0 "Potez P.25 CAS"
  FRA_CAS_equipment_1:0 "Breguet Br.693"
@@ -1953,7 +1943,8 @@ NOR_nav_bomber_equipment_3_short:"PBY"
  avro_lancaster_equipment_2_desc:0 "The Lancaster Special refers to several modified variants of the Avro Lancaster to perform different duties. This aircraft has been modified to accept the 12,000 lb Tallboy bomb."
  tech_avro_lancaster_equipment_2:0 "Avro Lancaster (Special)"
  
- ENG_flying_boat_equipment_1:0 "Prewar Flying Boat"
+ ENG_flying_boat_equipment_1:0 "Supermarine Scapa"
+ ENG_flying_boat_equipment_1_short:0 "Scapa (F-B)"
  ENG_flying_boat_equipment_1_desc:0 "Flying Boats are large amphibious aircraft used for scouting and attacking enemy fleets. While often carrying a larger payload and armament than naval bombers, flying boats are usually vulnerable to interception."
  ENG_flying_boat_equipment_2:0 "Saro London"
  ENG_flying_boat_equipment_2_short:0 "London (F-B)"
@@ -1967,6 +1958,88 @@ NOR_nav_bomber_equipment_3_short:"PBY"
  ENG_flying_boat_equipment_4_short:0 "Seaford (F-B)"
  ENG_flying_boat_equipment_4_desc:0 "Flying Boats are large amphibious aircraft used for scouting and attacking enemy fleets. While often carrying a larger payload and armament than naval bombers, flying boats are usually vulnerable to interception."
  tech_short_seaford_equipment_1:0 "Short Seaford"
+ 
+ CAN_flying_boat_equipment_1:0 "Supermarine Scapa"
+ CAN_flying_boat_equipment_1_short:0 "Scapa (F-B)"
+ CAN_flying_boat_equipment_2:0 "Saro London"
+ CAN_flying_boat_equipment_2_short:0 "London (F-B)"
+ CAN_flying_boat_equipment_3:0 "Short Sunderland"
+ CAN_flying_boat_equipment_3_short:0 "Sunderland (F-B)"
+ CAN_flying_boat_equipment_4:0 "Short Seaford"
+ CAN_flying_boat_equipment_4_short:0 "Seaford (F-B)"
+ 
+ AST_flying_boat_equipment_1:0 "Supermarine Scapa"
+ AST_flying_boat_equipment_1_short:0 "Scapa (F-B)"
+ AST_flying_boat_equipment_2:0 "Saro London"
+ AST_flying_boat_equipment_2_short:0 "London (F-B)"
+ AST_flying_boat_equipment_3:0 "Short Sunderland"
+ AST_flying_boat_equipment_3_short:0 "Sunderland (F-B)"
+ AST_flying_boat_equipment_4:0 "Short Seaford"
+ AST_flying_boat_equipment_4_short:0 "Seaford (F-B)"
+ 
+ NZL_flying_boat_equipment_1:0 "Supermarine Scapa"
+ NZL_flying_boat_equipment_1_short:0 "Scapa (F-B)"
+ NZL_flying_boat_equipment_2:0 "Saro London"
+ NZL_flying_boat_equipment_2_short:0 "London (F-B)"
+ NZL_flying_boat_equipment_3:0 "Short Sunderland"
+ NZL_flying_boat_equipment_3_short:0 "Sunderland (F-B)"
+ NZL_flying_boat_equipment_4:0 "Short Seaford"
+ NZL_flying_boat_equipment_4_short:0 "Seaford (F-B)"
+ 
+ RAJ_flying_boat_equipment_1:0 "Supermarine Scapa"
+ RAJ_flying_boat_equipment_1_short:0 "Scapa (F-B)"
+ RAJ_flying_boat_equipment_2:0 "Saro London"
+ RAJ_flying_boat_equipment_2_short:0 "London (F-B)"
+ RAJ_flying_boat_equipment_3:0 "Short Sunderland"
+ RAJ_flying_boat_equipment_3_short:0 "Sunderland (F-B)"
+ RAJ_flying_boat_equipment_4:0 "Short Seaford"
+ RAJ_flying_boat_equipment_4_short:0 "Seaford (F-B)"
+ 
+ SAF_flying_boat_equipment_1:0 "Supermarine Scapa"
+ SAF_flying_boat_equipment_1_short:0 "Scapa (F-B)"
+ SAF_flying_boat_equipment_2:0 "Saro London"
+ SAF_flying_boat_equipment_2_short:0 "London (F-B)"
+ SAF_flying_boat_equipment_3:0 "Short Sunderland"
+ SAF_flying_boat_equipment_3_short:0 "Sunderland (F-B)"
+ SAF_flying_boat_equipment_4:0 "Short Seaford"
+ SAF_flying_boat_equipment_4_short:0 "Seaford (F-B)"
+ 
+ EGY_flying_boat_equipment_1:0 "Supermarine Scapa"
+ EGY_flying_boat_equipment_1_short:0 "Scapa (F-B)"
+ EGY_flying_boat_equipment_2:0 "Saro London"
+ EGY_flying_boat_equipment_2_short:0 "London (F-B)"
+ EGY_flying_boat_equipment_3:0 "Short Sunderland"
+ EGY_flying_boat_equipment_3_short:0 "Sunderland (F-B)"
+ EGY_flying_boat_equipment_4:0 "Short Seaford"
+ EGY_flying_boat_equipment_4_short:0 "Seaford (F-B)"
+ 
+ MAL_flying_boat_equipment_1:0 "Supermarine Scapa"
+ MAL_flying_boat_equipment_1_short:0 "Scapa (F-B)"
+ MAL_flying_boat_equipment_2:0 "Saro London"
+ MAL_flying_boat_equipment_2_short:0 "London (F-B)"
+ MAL_flying_boat_equipment_3:0 "Short Sunderland"
+ MAL_flying_boat_equipment_3_short:0 "Sunderland (F-B)"
+ MAL_flying_boat_equipment_4:0 "Short Seaford"
+ MAL_flying_boat_equipment_4_short:0 "Seaford (F-B)"
+ 
+ YEM_flying_boat_equipment_1:0 "Supermarine Scapa"
+ YEM_flying_boat_equipment_1_short:0 "Scapa (F-B)"
+ YEM_flying_boat_equipment_2:0 "Saro London"
+ YEM_flying_boat_equipment_2_short:0 "London (F-B)"
+ YEM_flying_boat_equipment_3:0 "Short Sunderland"
+ YEM_flying_boat_equipment_3_short:0 "Sunderland (F-B)"
+ YEM_flying_boat_equipment_4:0 "Short Seaford"
+ YEM_flying_boat_equipment_4_short:0 "Seaford (F-B)"
+ 
+ BOI_flying_boat_equipment_1:0 "Supermarine Scapa"
+ BOI_flying_boat_equipment_1_short:0 "Scapa (F-B)"
+ BOI_flying_boat_equipment_2:0 "Saro London"
+ BOI_flying_boat_equipment_2_short:0 "London (F-B)"
+ BOI_flying_boat_equipment_3:0 "Short Sunderland"
+ BOI_flying_boat_equipment_3_short:0 "Sunderland (F-B)"
+ BOI_flying_boat_equipment_4:0 "Short Seaford"
+ BOI_flying_boat_equipment_4_short:0 "Seaford (F-B)"
+ 
  hawker_osprey_fighter_equipment_1:0 "Hawker Osprey"
  hawker_osprey_fighter_equipment_1_short:0 "Osprey (Cv-F)"
  hawker_osprey_fighter_equipment_1_desc:0 "Fighter aircraft are designed to intercept and destroy enemy aircraft. Carrier fighters are fighters that have been modified or designed to operate from aircraft carriers."
