--- a/bicemodded/localisation/english/equipment_l_english.yml
+++ b/bicemodded/localisation/english/equipment_l_english.yml
@@ -6674,21 +6674,21 @@
  jp_nav_bomber_equipment_5:0 "Yokosuka P1Y1 'Ginga' Naval Bomber"
  
  #Japanese Flying boats#
- tech_JAP_flying_boat_equipment_0:0 "Flying Boat I"
- tech_JAP_flying_boat_equipment_0_desc:0 "Flying Boats are long-range maritime patrol aircrafts that carry out naval and air reconnaissance duties in the pacific and atlantic theater where the number of available airfields is limited. Flying Boats have moderate self-defense armament and its bomb loads can be used to attack ships when discovered. The military value of flying boats was well-recognized, and every country bordering on water operated them in a military capacity at the outbreak of the war. They were utilized in various tasks from anti-submarine patrol to air-sea rescue and gunfire spotting for battleships."
+ #tech_JAP_flying_boat_equipment_0:0 "Hiro H4H Flying Boat"
+ #tech_JAP_flying_boat_equipment_0_desc:0 "Flying Boats are long-range maritime patrol aircrafts that carry out naval and air reconnaissance duties in the pacific and atlantic theater where the number of available airfields is limited. Flying Boats have moderate self-defense armament and its bomb loads can be used to attack ships when discovered. The military value of flying boats was well-recognized, and every country bordering on water operated them in a military capacity at the outbreak of the war. They were utilized in various tasks from anti-submarine patrol to air-sea rescue and gunfire spotting for battleships."
  JAP_flying_boat_equipment_1_desc:0 "Flying Boats are long-range maritime patrol aircrafts that carry out naval and air reconnaissance duties in the pacific and atlantic theater where the number of available airfields is limited. Flying Boats have moderate self-defense armament and its bomb loads can be used to attack ships when discovered. The military value of flying boats was well-recognized, and every country bordering on water operated them in a military capacity at the outbreak of the war. They were utilized in various tasks from anti-submarine patrol to air-sea rescue and gunfire spotting for battleships."
- JAP_flying_boat_equipment_1:0 "Flying Boat I"
- JAP_flying_boat_equipment_1_short:0 "(Fly.Bt)"
+ JAP_flying_boat_equipment_1:0 "Hiro H4H"
+ JAP_flying_boat_equipment_1_short:0 "H4H (Fly.Bt)"
  
  
- tech_JAP_flying_boat_equipment_1:0 "Kawanishi H6K Flying-Boat"
- tech_JAP_flying_boat_equipment_1_desc:0 "The Kawanishi H6K1 is a long-range flying boat. It was designed in response for an IJN request for a long-range naval patrol airplane which could carry 1600 kg of torpedoes or 1000 kg of bombload. The H6K accomplished these weight requirements, and could perform up to 24-hour patrol missions over an extremely long range - H6Ks performed missions over most of Australia from bases on the East Indies. 215 were built from 1936 to 1942."
+ #tech_JAP_flying_boat_equipment_1:0 "Kawanishi H6K"
+ #tech_JAP_flying_boat_equipment_1_desc:0 "The Kawanishi H6K1 is a long-range flying boat. It was designed in response for an IJN request for a long-range naval patrol airplane which could carry 1600 kg of torpedoes or 1000 kg of bombload. The H6K accomplished these weight requirements, and could perform up to 24-hour patrol missions over an extremely long range - H6Ks performed missions over most of Australia from bases on the East Indies. 215 were built from 1936 to 1942."
  JAP_flying_boat_equipment_2_desc:0 "The Kawanishi H6K1 is a long-range flying boat. It was designed in response for an IJN request for a long-range naval patrol airplane which could carry 1600 kg of torpedoes or 1000 kg of bombload. The H6K accomplished these weight requirements, and could perform up to 24-hour patrol missions over an extremely long range - H6Ks performed missions over most of Australia from bases on the East Indies. 215 were built from 1936 to 1942."
  JAP_flying_boat_equipment_2:0 "Kawanishi H6K1 Flying-Boat"
  JAP_flying_boat_equipment_2_short:0 "H6K1 (Fly.Bt)"
  
- tech_JAP_flying_boat_equipment_2:0 "Kawanishi H8K Flying-Boat"
- tech_JAP_flying_boat_equipment_2_desc:0 "The Kawanishi H8K is a long-range flying boat."
+ #tech_JAP_flying_boat_equipment_2:0 "Kawanishi H8K"
+ #tech_JAP_flying_boat_equipment_2_desc:0 "The Kawanishi H8K is a long-range flying boat."
  JAP_flying_boat_equipment_3_desc:0 "The Kawanishi H8K is a long-range flying boat."
  JAP_flying_boat_equipment_3:0 "Kawanishi H8K1 Flying-Boat"
  JAP_flying_boat_equipment_3_short:0 "H8K1 (Fly.Bt)"
@@ -7783,18 +7783,18 @@
  SOV_transport_plane_equipment_3_desc:0 "§LPlanes used to transport troops on paradrop missions.§!"
  
  
- SOV_flying_boat_equipment_1:0 "BE-6"
+ SOV_flying_boat_equipment_1:0 "Beriev 6"
  SOV_flying_boat_equipment_1_short:0 "BE-6 F-B"
- SOV_flying_boat_equipment_1_desc:0 ""
- SOV_flying_boat_equipment_2:0 "MBR-2"
+ #SOV_flying_boat_equipment_1_desc:0 ""
+ SOV_flying_boat_equipment_2:0 "Beriev MBR-2"
  SOV_flying_boat_equipment_2_short:0 "MBR-2 F-B"
- SOV_flying_boat_equipment_2_desc:0 "The Do 24 was an all-metal parasol monoplane with a broad-beamed hull and stabilising sponsons. Twin tails were mounted on the upswept rear of the hull, while three wing-mounted tractor configuration Bramo 323R-2 Fafnir 9-cylinder radial engines with 940 HP each powered the aircraft. Fuel was carried in tanks in the sponsons and the wing centre section. Up to 1,200 kg of bombs could be carried under the aircraft's wings, while defensive armament consisted of three gun turrets, one each in nose, dorsal and tail positions. In early aircraft the turrets were each fitted with a machine gun but later aircraft carried a 20 mm cannon in the dorsal turret."
- SOV_flying_boat_equipment_3:0 "MDR-2"
+ #SOV_flying_boat_equipment_2_desc:0 ""
+ SOV_flying_boat_equipment_3:0 "Beriev MDR-2"
  SOV_flying_boat_equipment_3_short:0 "MDR-2 F-B"
- SOV_flying_boat_equipment_3_desc:0 "The BV 138's appearance was unique in its combination of unusual design features with its twin boom tail unit, short fuselage and trimotor engine configuration. The short hull, with its hydrodynamic step beneath and flat sides, earned it the nickname, "Fliegender Holzschuh" (the flying clog)."
- SOV_flying_boat_equipment_4:0 "MDR-6"
+ #SOV_flying_boat_equipment_3_desc:0 ""
+ SOV_flying_boat_equipment_4:0 "Beriev MDR-6"
  SOV_flying_boat_equipment_4_short:0 "MDR-6 F-B"
- SOV_flying_boat_equipment_4_desc:0 "The Bv 
+ #SOV_flying_boat_equipment_4_desc:0 "The Bv"
  
 #### archetype description ###
  ###soviet###
