--- a/bicemodded/localisation/english/equip_air_l_english.yml
+++ b/bicemodded/localisation/english/equip_air_l_english.yml
@@ -1236,6 +1236,9 @@ NOR_nav_bomber_equipment_3_short:"PBY"
  ITA_strat_bomber_equipment_2_short:0 "P.108"
  ITA_strat_bomber_equipment_3:0 "Piaggio P.133"
  ITA_strat_bomber_equipment_3_short:0 "P.133"
+ ITA_strat_bomber_equipment_4:0 "Savoia-Marchetti SM.95B"
+ ITA_strat_bomber_equipment_4_short:0 "SM.95B"
+ ITA_strat_bomber_equipment_4_desc:0 "A development of the SM.95 civilian transport, the SM.95B was an Italian heavy bomber."
  ITA_tac_bomber_equipment_0:0 "Caproni Ca.101"
  ITA_tac_bomber_equipment_0_short:0 "Ca.101"
  ITA_tac_bomber_equipment_1:0 "Fiat BR.20 Cicogna"
@@ -1268,7 +1271,27 @@ NOR_nav_bomber_equipment_3_short:"PBY"
  ITA_cv_fighter_equipment_3_short:0 "G.50S"
  ITA_cv_fighter_equipment_4:0 "Fiat G.55S Centauro"
  ITA_cv_fighter_equipment_4_short:0 "G.55S Centauro"
+ 
+ ITA_flying_boat_equipment_1:0 "Macchi M.41bis"
+ ITA_flying_boat_equipment_1_short:0 "M.41bis (F.B)"
+ #ITA_flying_boat_equipment_1_desc:0 ""
+ ITA_flying_boat_equipment_2:0 "Macchi M.71"
+ ITA_flying_boat_equipment_2_short:0 "M.71 (F.B)"
+ #ITA_flying_boat_equipment_2_desc:0 ""
+ ITA_flying_boat_equipment_3:0 "Macchi MC.99"
+ ITA_flying_boat_equipment_3_short:0 "MC.99 (F.B)"
+ ITA_flying_boat_equipment_3_desc:0 "The Macchi MC.99 was a wooden twin-engined shoulder-wing cantilever monoplane flying boat capable of carrying two torpedoes. Propulsion was provided by twin 1,190 hp Isotta Fraschini Asso XI R.2C.15 engines, strut-mounted above the wings."
 
+ ITA_transport_plane_equipment_1:0 "Caproni Ca.133T Transport Plane"
+ ITA_transport_plane_equipment_1_short:0 "Ca.133T (T.P)"
+ ITA_transport_plane_equipment_1_desc:0 "§LPlanes used to transport troops on paradrop missions.§!"
+ ITA_transport_plane_equipment_2:0 "Fiat G.12 Transport Plane"
+ ITA_transport_plane_equipment_2_short:0 "G.12 (T.P)"
+ ITA_transport_plane_equipment_2_desc:0 "§LPlanes used to transport troops on paradrop missions.§!"
+ ITA_transport_plane_equipment_3:0 "Piaggio P.108T Transport Plane"
+ ITA_transport_plane_equipment_3_short:0 "P.108T (T.P)"
+ ITA_transport_plane_equipment_3_desc:0 "§LPlanes used to transport troops on paradrop missions.§!"
+ 
  
  CAN_jet_fighter_equipment_1:0 "De Havilland Vampire"
  CAN_jet_fighter_equipment_1_short:0 "Vampire"
