--- a/bicemodded/localisation/english/events_l_english.yml
+++ b/bicemodded/localisation/english/events_l_english.yml
@@ -2805,7 +2805,7 @@
  britain.19.t:0 "Free India Government Established"
  britain.19.d:0 "With the support of Japan, Indian nationalists have established a government-in-exile, the Azad Hind.\n\nThe nationalists are spreading propaganda in the Raj, and encouraging Sepoy desertion. While they are lacking support for now, their efforts could eventually become dangerous."
  britain.19.a:0 "A fool's errand!"
- ENG_RAJ_azad_hind_tooltip:0 "Nationalist support will continue to grow unless countered by the promise of eventual independence."
+ ENG_RAJ_azad_hind_tooltip:0 "Nationalist support will continue to grow unless countered by the promise of eventual independence. §RA support of over 30% will lead to revolt!§!"
  britain.20.t:0 "Azad Hind Leads Indian Revolt"
  britain.20.d:0 "The Azad hind, the Free India government-in-exile, has been spreading propaganda and canvassing for support among the people of the Raj. Despite the importance of the Empire working together being greater than ever, they have decided that this is the time to strike."
  britain.20.a:0 "No, the Empire must stand united!"
