soviet planes localization

--- a/bicemodded/localisation/english/equip_air_l_english.yml
+++ b/bicemodded/localisation/english/equip_air_l_english.yml
@@ -273,8 +273,8 @@
  scout_plane_equipment_2_short:0 "Imp. Scout Plane (Scout)"
  scout_plane_equipment_2_desc:0 "By developing dedicated planes for aerial surveillance and long-range reconnaissance, we ensure that we gain and maintain an accurate picture of our opponent's intentions and capabilities."
  
- GER_scout_plane_equipment_1:0 "Henschel Hs 126 (Scout)"
- GER_scout_plane_equipment_1_short:0 "Hs 126 (Scout)"
+ GER_scout_plane_equipment_1:0 "Henschel Hs 126"
+ GER_scout_plane_equipment_1_short:0 "Hs 126 Recon Aircraft"
  JAP_rocket_suicide_equipment_1:0 "Yokosuka MXY7 Ohka"
  JAP_rocket_suicide_equipment_1_short:0 "Ohka"
  JAP_rocket_suicide_equipment_1_desc:0 "The Yokosuka MXY-7 Ohka was a purpose-built, rocket powered human-guided anti-shipping kamikaze attack plane employed by Japan towards the end of World War II."
@@ -295,6 +295,20 @@
  GER_rocket_interceptor_equipment_2_short:0 "FPF"
  GER_rocket_interceptor_equipment_3:0 "Focke-Wulf Volksjäger"
  GER_rocket_interceptor_equipment_3_short:0 "Fw VJ"
+ SOV_scout_plane_equipment_1:0 "Neman R-10"
+ SOV_scout_plane_equipment_1_short:0 "R-10 Recon Aircraft"
+ SOV_scout_plane_equipment_2:0 "Yakovlev Yak-4"
+ SOV_scout_plane_equipment_2_short:0 "Yak-4 Recon Aircraft"
+ SOV_jet_fighter_equipment_1:0 "Mikoyan-Gurevich MiG-9"
+ SOV_jet_fighter_equipment_1_short:0 "MiG-9 Jet-Fighter"
+ SOV_jet_fighter_equipment_2:0 "Mikoyan-Gurevich MiG-15"
+ SOV_jet_fighter_equipment_2_short:0 "MiG-15 Jet-Fighter"
+ SOV_jet_tac_bomber_equipment_1:0 "Ilyushin Il-22"
+ SOV_jet_tac_bomber_equipment_1_short:0 "Il-22 Jet-Bomber"
+ SOV_jet_tac_bomber_equipment_2:0 "Ilyushin Il-28"
+ SOV_jet_tac_bomber_equipment_2_short:0 "Il-28 Jet-Bomber"
+ SOV_jet_strat_bomber_equipment_1:0 "Tupolev Tu-16"
+ SOV_jet_strat_bomber_equipment_1_short:0 "Tu-16 Strategic Jet-Bomber"
  HOL_fighter_equipment_0:0 "Fokker D.XVII"
  HOL_fighter_equipment_0_short:0 "D.XVII"
  HOL_fighter_equipment_1:0 "Fokker D.XXI"
