free france french flying boats flying boats icons

--- a/bicemodded/localisation/english/equip_air_l_english.yml
+++ b/bicemodded/localisation/english/equip_air_l_english.yml
@@ -853,6 +853,14 @@
  FRA_cv_fighter_equipment_2_short:0 "D.790"
  FRA_cv_fighter_equipment_3:0 "Dewoitine D.525"
  FRA_cv_fighter_equipment_3_short:0 "D.525"
+ FRA_flying_boat_equipment_1:0 "CAMS 55"
+ FRA_flying_boat_equipment_1_short:0 "CAMS 55 (F.B)"
+ FRA_flying_boat_equipment_2:0 "Breguet 521"
+ FRA_flying_boat_equipment_2_short:0 "Bre.521 (F.B)"
+ FRA_flying_boat_equipment_3:0 "Breguet 730"
+ FRA_flying_boat_equipment_3_short:0 "Bre.730 (F.B)"
+ FRA_flying_boat_equipment_4:0 "Breguet 731"
+ FRA_flying_boat_equipment_4_short:0 "Bre.731 (F.B)"
 
 
 
