--- a/bicemodded/localisation/english/air_l_english.yml
+++ b/bicemodded/localisation/english/air_l_english.yml
@@ -46,6 +46,8 @@
  AIRWING_MISSION_TYPE_BOMBING_LOGISTICS_MISSIONS:0 "Bombing and Logistics Missions"
  AIRWING_MISSION_WING_STATUS_1:0 "$NAME|H$ $STATUS|H$."
  AIRWING_MISSION_WING_STATUS_2:0 "§T$NUM|H$ of $NAME|H$ $STATUS|H$.§!"
+ AIRWING_MISSION_WINGS_STATUS_1: "$NUM$ $NAME|H$ wing $STATUS|H$."
+ AIRWING_MISSION_WINGS_STATUS_2: "$NUM$ $NAME|H$ wings $STATUS|H$."
  AIRWING_MISSION_TRAINING_WILL_STOP_AT_MAX:0 "§HPilot Exercises§! will be automatically stopped once §HAir Wing§! reaches the maximum training experience."
  AIRWING_MISSION_CARRIER_IN_PORT:0 "§RCan't perform missions when the Carrier is docked in a port.§!"
  AIRWING_COUNTRY_HIDDEN:1 "§T$COUNTRY|UH$ has around $AMOUNT|H$ airplanes in this airbase.§!"
@@ -68,16 +70,16 @@
  AIRBASE_CAPACITY_LIMITED_BY_DAMAGE:0 "§RCapacity limited by damage!§!"
  AIRBASE_AIRPLANES_ESTIMATED:1 "§HAir Base§! in $BASE|H$: around $VALUE|H$ airplanes"
  AIRWING_SPLIT:1 "Split the selected Air Wings in two"
-  AIRWING_SPLIT_BASE:1 "Split Air Wing"
+ AIRWING_SPLIT_BASE:1 "Split Air Wing"
  AIRWING_CREATE_EMPTY:0 "§RCannot create empty air wing!§!"
  AIRWING_CREATE_NO_MANPOWER:0 "§RCannot create air wing! Not enough service manpower for it.§!"
  AIRWING_REORG:0 "Reorganize Air Wings"
  AIRWING_REORG_ONE:0 "Reorganize Air Wing"
  AIRWING_REORG_BASE:1 "Reorganize Air Wings"
- AIRWING_MERGE_BLOCKED:3 "§RTo merge, select two or more Air Wings of the same type from the same airbase, that are not exile wings or from the same government in exile and are not in transfer.§!"
+ AIRWING_MERGE_BLOCKED:4 "§RTo merge, select two or more Air Wings of the same type from the same airbase, that are not exile wings or from the same government in exile, are not volunteering, and are not in transfer.§!"
  AIRWING_MERGE_GROUPS_BLOCKED:0 "§RYou need to select two or more Air Groups in order to merge them.§!"
  AIRWING_REORG_BLOCKED:2 "§RSelect one or two Air Wings of the same type from the same airbase, that are not exile wings or from the same exile government and are not in transfer.§!"
- AIRWING_SPLIT_BLOCKED:0 "§RSelect one Air Wing that is not in transfer and has at least §H2§! planes.§!"
+ AIRWING_SPLIT_BLOCKED:1 "§RSelect one Air Wing that is not in transfer, is not volunteering, and has at least §H2§! planes.§!"
  AIRWING_REORG_ONE_BASE:1 "Reorganize Air Wing"
  AIRWING_NEW:0 "Create new Air Wing"
  AIRWING_NEW_BASE:0 "Create new Air Wing in $BASE|H$"
@@ -333,10 +335,10 @@
  AIR_VIEW_DAMAGE_DISRUPTED_PLANES_BY_ENEMY:1 "§HFriendly Planes Disrupted§!\nEnough damage was inflicted to force the plane to return home before carrying out its mission."
  AIR_VIEW_DAMAGE_FROM_PLANES_BY_US:0 "§HEnemy Planes Shot Down§!"
  AIR_VIEW_DAMAGE_FROM_PLANES_BY_ENEMY:0 "§HFriendly Planes Lost§!"
- AIR_VIEW_DAMAGE_FROM_AA_BY_US:0 "§HEnemy Planes Downed by Anti-Air§!"
  AIR_VIEW_INTERCEPTED_EN_ROUTE_BY_US_COUNT:0 "§HEnemy Planes Shot Down En Route to Target:§! $COUNT$"
  AIR_VIEW_INTERCEPTED_EN_ROUTE_BY_ENEMY:0 "§RFriendly Planes Shot Down En Route to Target!§!"
  AIR_VIEW_INTERCEPTED_EN_ROUTE_BY_ENEMY_COUNT:0 "§HFriendly Planes Shot Down En Route to Target:§! $COUNT$"
+ AIR_VIEW_DAMAGE_FROM_AA_BY_US:0 "§HEnemy Planes Downed by Anti-Air§!"
  AIR_VIEW_DAMAGE_FROM_AA_BY_ENEMY:0 "§HPlanes Lost to Anti-Air§!"
  AIR_VIEW_DAMAGE_TO_LOGISTICS_BY_US:0 "§HEnemy Logistics Bombed§!"
  AIR_VIEW_DAMAGE_TO_LOGISTICS_BY_ENEMY:0 "§HFriendly Logistics Bombed§!"
