--- a/bicemodded/localisation/english/core_l_english.yml
+++ b/bicemodded/localisation/english/core_l_english.yml
@@ -249,8 +249,11 @@
  LOADING_SAVEGAME_NO_NAME:0 "Loading savegame"
  LOADING_DATABASES:0 "Loading databases"
  LOADING_MAP_SPRITES:0 "Loading sprites"
+ OLD_SAVEGAME_POPUP: "This save is from another version of the game and cannot be loaded."
  OLD_SAVEGAME:0 "§RThis save is from another version of the game and cannot be loaded.§!"
  OLD_SAVEGAME_ALLOWED:0 "§RThis save is from another version of the game and may behave unpredictably when loaded.§!"
+ CANTCONTINUEGAME: "Can't continue game from the last save $SAVE$"
+ CANTCONTINUEGAME_TITLE: "Failed to load save"
  CONFIRMUNSYNCTITLE:0 "Unsynchronize file"
  CONFIRMUNSYNCTEXT:0 "Are you sure you want to remove $NAME|H$ from cloud?"
  CLOUDSAVE_SPACE_NEEED:0 "$NEEDED$ needed to save the game."
@@ -1948,3 +1951,4 @@
  LOGISTICS_ONLY_FOR_ALLIES:0 "We can only view the logistics menu for faction members or subjects."
  TRAINING_ACCIDENT:0 "a training accident"
  SUNK_BY_MINES:0 "mines"
+ PARADROP_PLANES_REQUIRED: "\n§RThis order cannot be executed:§!\nAn additional $WINGS|H$ transport wing(s) are required."
