AI tweaks and fixes world tension increased early game

--- a/bicemodded/localisation/english/ship_modules_l_english.yml
+++ b/bicemodded/localisation/english/ship_modules_l_english.yml
@@ -298,6 +298,7 @@
  sub_ship_engine_4:0 "4,000 Shp Engine"
  sub_ship_engine_4_short:0 "Submarine Engine IV"
  sub_ship_engine_4_desc:1 "Advanced engines with turbochargers are able to run much faster for a brief period, either to chase targets or to recharge the batteries quicker."
+ sub_ship_engine_5:0 "5,000 Shp Engine"
  sub_ship_engine_5_short:0 "Submarine Engine V"
  sub_ship_engine_5_desc:1 "Modern engines with turbochargers or different kinds of propulsion are able to run much faster, either to chase targets or to recharge the batteries quicker."
  cruiser_ship_engine_0:0 "50,000 Shp Engine"
