--- a/bicemodded/localisation/english/triggers_l_english.yml
+++ b/bicemodded/localisation/english/triggers_l_english.yml
@@ -838,8 +838,8 @@
  TRIGGER_POWER_BALANCE_ABOVE_RANGE:1 "$POWER_BALANCE|Y$ to the £GFX_BoP_right_texticon£§Yright§! of the $RANGE|Y$ range"
  TRIGGER_POWER_BALANCE_NOT_ABOVE_RANGE:1 "$POWER_BALANCE|Y$ is at the $RANGE|Y$ range or further £GFX_BoP_left_texticon£§Yleft§!"
 
- TRIGGER_POWER_BALANCE_SIDE_ACTIVE:1 "$SIDE|Y$ is the active side in $POWER_BALANCE|Y$"
- TRIGGER_POWER_BALANCE_SIDE_NOT_ACTIVE:1 "$SIDE|Y$ is not the active side in $POWER_BALANCE|Y$"
+ TRIGGER_POWER_BALANCE_SIDE_ACTIVE:2 "$SIDE|Y$ is an active side in $POWER_BALANCE|Y$"
+ TRIGGER_POWER_BALANCE_SIDE_NOT_ACTIVE:2 "$SIDE|Y$ is not an active side in $POWER_BALANCE|Y$"
  TRIGGER_HAS_POWER_BALANCE_MODIFIER:1 "$POWER_BALANCE|Y$ has modifier $MODIFIER|Y$"
  TRIGGER_HAS_NOT_POWER_BALANCE_MODIFIER:1 "$POWER_BALANCE|Y$ doesn't have the modifier $MODIFIER|Y$"
 
@@ -881,3 +881,8 @@
  TRIGGER_HAS_RESOURCES_RIGHT:0 "$COUNTRY|H$ has all the rights to $RESOURCES|H$"
  TRIGGER_HAS_NOT_RESOURCES_RIGHT:0 "$COUNTRY|H$ does not have all the rights to $RESOURCES|H$"
  TRIGGER_OVERLORD:0 "Overlord"
+ 
+ TRIGGER_PC_IS_INSIDE_INFLUENCE_RANGE: "Is inside max AI influence range" ##Will never be displayed
+ TRIGGER_PC_IS_OUTSIDE_INFLUENCE_RANGE: "Is outside max AI influence range" ##Will never be displayed
+ TRIGGER_HAS_COMPLETED_CUSTOM_ACHIEVEMENT: "Has completed achievement $ACHIEVEMENT$"
+ TRIGGER_HAS_NOT_COMPLETED_CUSTOM_ACHIEVEMENT: "Has not completed achievement $ACHIEVEMENT$"
